--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="img/Programmer-Line-Icon-Graphics-.jpg"
+      href="Programmer-Line-Icon-Graphics-.jpg"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
@@ -72,7 +72,7 @@
         </h1>
         <h4>With passion for programming.</h4>
         <button class="btn--text btn--scroll-to">Learn more &DownArrow;</button>
-       <img src="img/Hero-main.png" class="header__img" alt="About me Code" />
+       <img src="Hero-main.png" class="header__img" alt="About me Code" />
       </div>
     </header>
 
@@ -86,8 +86,8 @@
       </div>
       <div class="about">
         <img
-          src="img/pexels2.jpg""
-          data-src="img/pexels2.jpg"
+          src="pexels2.jpg""
+          data-src="pexels2.jpg"
           alt="Computer"
           class="about__img lazy-img"
         />
@@ -129,8 +129,8 @@
             user-centered technical solutions.</p>
         </div>
         <img
-          src="img/pexels3.jpg"
-          data-src="img/pexels3.jpg"
+          src="pexels3.jpg"
+          data-src="pexels3.jpg"
           alt="Code"
           class="about__img lazy-img"
         />
